# real-estate-os

./: .dockerignore  .env.example  .env.mock  .env.staging.example  .gitignore  .pre-commit-config.yaml  API_EXAMPLES.md  API_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  AUDIT_CANVAS.md  AUDIT_REPORT.md  AUDIT_SUMMARY_20251105.md  AUTH_FIX_README.md  AUTH_STRATEGY.md  BACKEND_API_AUDIT.md  COLLECT_PR_EVIDENCE.sh  COMPREHENSIVE_PLATFORM_AUDIT.md  COMPREHENSIVE_SESSION_SUMMARY.md  COMPREHENSIVE_TEST_STATUS.md  COMPREHENSIVE_VERIFICATION_GUIDE.md  COMPREHENSIVE_WORK_PLAN.md  COPY_THESE_FILES.ps1  CURRENT_STATE_AUDIT.md  CURRENT_STATUS.md  DASHBOARD_FIX_INSTRUCTIONS.md  DEMO_CHEAT_SHEET.md  DEMO_GUIDE.md  DEMO_RUNBOOK.md  Dockerfile  Dockerfile.api  Dockerfile.txt  ENHANCED_SEED_DATA.txt  EVIDENCE_PACK.md  FINAL_COMPLETION_SUMMARY.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS.md  FIND_AND_RUN.md  FIX_AUTH_MANUALLY.md  FRONTEND_VERIFICATION.sh  FULL_GO_ACCEPTANCE_REPORT.md  (+97 more)
.github/: PULL_REQUEST_TEMPLATE.md
RUNBOOKS/: backup-strategy.md  restore.md
address_normalization/: __init__.py  libpostal_client.py
agents/collab/timeline/: README.md  pyproject.toml
agents/collab/timeline/src/timeline/: __init__.py  models.py  repository.py  timeline.py
agents/collab/timeline/tests/: conftest.py  test_timeline.py
agents/discovery/resolver/: pyproject.toml
agents/discovery/resolver/src/resolver/: __init__.py  resolver.py
agents/discovery/resolver/src/resolver/db/: models.py
agents/discovery/resolver/tests/: conftest.py  test_db_integration.py  test_resolver.py
agents/docgen/memo/: README.md  pyproject.toml
agents/docgen/memo/src/memo/: __init__.py  memo.py
agents/docgen/memo/templates/: memo_template.html
agents/docgen/memo/tests/: conftest.py  test_memo.py
agents/enrichment/hub/: pyproject.toml
agents/enrichment/hub/src/enrichment_hub/: __init__.py  hub.py
agents/enrichment/hub/src/enrichment_hub/db/: __init__.py  repository.py
agents/enrichment/hub/src/enrichment_hub/plugins/: __init__.py  base.py  basic_attrs.py  geocode.py
agents/enrichment/hub/tests/: conftest.py  test_hub.py  test_plugins.py
agents/outreach/orchestrator/: README.md  pyproject.toml
agents/outreach/orchestrator/src/orchestrator/: __init__.py  models.py  orchestrator.py  repository.py
agents/outreach/orchestrator/templates/: memo_delivery_email.html  memo_delivery_email.txt
agents/outreach/orchestrator/tests/: conftest.py  test_orchestrator.py
agents/pipeline/state/: README.md  pyproject.toml
agents/pipeline/state/src/state/: __init__.py  models.py  repository.py  state.py
agents/pipeline/state/tests/: conftest.py  test_state.py
agents/scoring/engine/: pyproject.toml
agents/scoring/engine/src/score_engine/: __init__.py  engine.py
agents/scoring/engine/tests/: conftest.py  test_engine.py
alembic/: env.py
api/: Dockerfile  README.md  __init__.py  auth.py  auth_utils.py  cache.py  celery_app.py  config.py  database.py  db.py  deliverability.py  dependencies.py  dlq.py  etag.py  event_emitter.py  exception_handlers.py  exceptions.py  health.py  idempotency.py  introspection.py  logging_config.py  main.py  metrics.py  minio_client.py  models.py  openapi_config.py  orm_models.py  pytest.ini  qdrant_client.py  rate_limit.py  reconciliation.py  redis_client.py  requirements.txt  schemas.py  seed_demo_data.py  sentry_integration.py  sse.py  storage.py  webhook_security.py
audit_artifacts/: AUDIT_EXECUTION_REPORT.md  merge4_resolution.txt
dags/: address_normalization_dag.py  data_quality_dag.py  discovery_dag.py  discovery_offmarket.py  docgen_packet.py  email_campaign.py  email_outreach.py  embedding_indexing.py  enrichment_property.py  example_hello_world.py  example_test_dag.py  hazards_etl_pipeline.py  lease_processing_pipeline.py  lineage_writer.py  minimal_e2e_pipeline.py  portfolio_twin_training.py  property_ingestion_with_gx_gates.py  property_pipeline_with_lineage.py  property_pipeline_with_provenance.py  property_processing_pipeline.py  score_master.py  scrape_listings_dag.py  sys_heartbeat.py
data_provenance/: provenance_tracker.py
data_quality/: expectation_suites.py  gx_config.py  gx_integration.py
db/: __init__.py  alembic.ini  dump.rdb  env.py  models.py  models_auth.py  models_outreach.py  models_provenance.py
docs/: API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_REPORT_E2E.md  AUTH_SETUP.md  BACKLOG_GAPS_E2E.md  CONSOLIDATION_REPORT_20251104.md  DEMO_ARCHITECTURE_DIAGRAM.md  DEMO_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_RUNBOOK.md  DLQ_SYSTEM.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICK_START.md  ETAG_CACHING.md  EVIDENCE_INDEX.md  EVIDENCE_INDEX_E2E.md  GAPS_AND_REMEDIATIONS.md  GITHUB_ACTIONS_MONITORING.md  HARDENING_SUMMARY.md  LAUNCH_GUARDRAILS.md  MANUAL_TESTING_GUIDE.md  PLATFORM_AUDIT_2025.md  PLATFORM_AUDIT_REPORT.md  POST_LAUNCH_ROADMAP.md  PR1_AUTH_IMPLEMENTATION.md  PR2_TESTING_IMPLEMENTATION.md  PROGRESS_REPORT.md  PROGRESS_SUMMARY.md  QUICKSTART.md  (+13 more)
services/auth/: README.md  pyproject.toml
services/auth/src/auth/: __init__.py  jwt_handler.py  middleware.py  models.py  password.py  repository.py
services/auth/tests/: __init__.py  test_jwt_handler.py  test_models.py  test_password.py
services/connectors/: README.md  pyproject.toml
services/connectors/src/connectors/: __init__.py  attom.py  base.py  manager.py  openaddresses.py  regrid.py
services/connectors/tests/: conftest.py  test_attom.py  test_manager.py  test_regrid.py
services/observability/: README.md  pyproject.toml
services/observability/src/observability/: __init__.py  errors.py  logging.py  metrics.py
services/observability/tests/: __init__.py  test_errors.py  test_logging.py  test_metrics.py
services/security/: README.md  pyproject.toml
services/security/src/security/: __init__.py  cors.py  headers.py  rate_limit.py  request_id.py  validation.py
services/security/tests/: __init__.py  test_validation.py
services/vector/: README.md  pyproject.toml
services/vector/src/vector/: __init__.py  client.py
services/vector/tests/: test_vector_smoke.py
(+933 files in other folders)
