[tool.poetry]
name = "real-estate-os"
version = "0.1.0"
description = "Real estate platform"
authors = ["codybias9 <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
psycopg2-binary = "^2.9.9"
python = "^3.10"
scrapy = "^2.13.3"
playwright = "^1.53.0"
aiohttp = "^3.12.13"
boto3 = "^1.39.3"
pydantic = "^2.11.7"
requests = "^2.32.4"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.44"
alembic = "^1.17.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.20"
slowapi = "^0.1.9"
bcrypt = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
