[tool.poetry]
name = "real-estate-os"
version = "0.1.0"
description = "Real estate platform"
authors = ["codybias9 <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
# Core Framework
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.11.7"
pydantic-settings = "^2.0.0"
# Database
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
# Authentication & Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
# Background Tasks
celery = "^5.3.0"
redis = "^5.0.0"
# Storage & Communication
boto3 = "^1.39.3"
aiohttp = "^3.12.13"
requests = "^2.32.4"
# Scraping (existing functionality)
scrapy = "^2.13.3"
playwright = "^1.53.0"
# Utilities
python-dateutil = "^2.8.2"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"
black = "^25.1.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
