[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collab-timeline"
version = "0.1.0"
description = "Collab.Timeline agent for property activity streams and collaboration"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "python-dateutil>=2.8.0",
    "markdown>=3.5.0",
    "bleach>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=timeline --cov-report=term-missing --cov-fail-under=70"
timeout = 10
asyncio_mode = "auto"

[tool.coverage.run]
source = ["timeline"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
