[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outreach-orchestrator"
version = "0.1.0"
description = "Outreach.Orchestrator agent for property owner outreach via email"
requires-python = ">=3.11"
dependencies = [
    "sendgrid>=6.10.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=orchestrator --cov-report=term-missing --cov-fail-under=70"
timeout = 10

[tool.coverage.run]
source = ["orchestrator"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
