[tool.poetry]
name = "reo-score-engine"
version = "0.1.0"
description = "Score Engine - Deterministic property investment scoring"
authors = ["Real Estate OS Team"]
packages = [{include = "score_engine", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
